chore: remove tailwind

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,6 +1,3 @@
 {
-  "tailwindConfig": "./tailwind.config.mjs",
-  "plugins": [
-    "prettier-plugin-tailwindcss"
-  ]
+  "tailwindConfig": "./tailwind.config.mjs"
 }
