--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "format": "prettier --write './src/**/*.{html,js,jsx,ts,tsx}'"
   },
   "devDependencies": {
+    "@types/bun": "^1.1.14",
+    "@types/web": "^0.0.187",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.47",
     "prettier": "^3.3.3",
